--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -8,18 +9,16 @@ body {
   width: 100%;
   margin: 0 auto;
 }
-
 h1,
 h2 {
   font-family: "Shrikhand", cursive;
+  font-size: 27px;
 }
 a {
   text-decoration: none;
   color: black;
 }
-
-/*A CODER EN MOBILE FIRST*/
-
+/*MOBILE FIRST*/
 /*HEADER*/
 
 header {
@@ -28,7 +27,7 @@ header {
   padding: 20px 0;
 }
 .logo img {
-  width: 230px;
+  width: 180px;
 }
 /*MAIN*/
 h2 {
@@ -39,15 +38,50 @@ h2 {
 .explore-contener {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   background-color: #f5f6fa;
+  padding-bottom: 28px;
+}
+.localisation {
+  border-top: 3px solid #b4b4b857;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e1e3e7d5;
   width: 100%;
 }
 
+.localisation-icon {
+  font-size: 16px;
+}
+input {
+  background-color: #e1e3e7d5;
+  padding-left: 17px;
+  border: transparent;
+  font-family: "roboto";
+  font-size: 16px;
+  color: black;
+  font-weight: bold;
+  height: 47px;
+}
+.titres {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 26px;
+}
+.btn-explore {
+  background-color: #9356dc;
+  border: 1px solid #9356dc;
+  color: white;
+  border-radius: 25px;
+  padding: 9px 16px;
+  box-shadow: 10px 8px 7px lightgrey;
+}
 /*BLOC FONCTIONNEMENT*/
 .fonctionnement-contener {
-  padding-bottom: 40px;
+  padding-bottom: 30px;
 }
 .btn-contener {
   display: flex;
@@ -56,32 +90,41 @@ h2 {
 }
 .btn {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   background-color: #f5f6fa;
-  width: 285px;
-  height: 80px;
+  width: 240px;
+  height: 60px;
   margin-bottom: 19px;
-  border-radius: 28px;
+  border-radius: 24px;
   font-weight: bold;
+  box-shadow: 0px 5px 12px lightgrey;
 }
-
 .btn-number {
+  position: absolute;
+  left: 25px;
   background-color: #9356dc;
   border-radius: 50%;
-  height: 32px;
-  width: 32px;
+  height: 22px;
+  width: 22px;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+.btn-contener a:hover {
+  background-color: #e4d9f1;
+}
+
+.btn-contener a:hover .btn-icon {
+  color: #9356dc;
+}
 /*BLOC RESTAURANT*/
 .restaurant-contener {
   background-color: #f5f6fa;
-  padding: 30px 0;
+  padding: 20px 0;
 }
-
 .cards-contener {
   display: flex;
   flex-direction: column;
