--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ a {
 header {
   display: flex;
   justify-content: center;
+  width: 100%;
   padding: 20px 0;
 }
 .logo img {
@@ -76,7 +77,7 @@ input {
   border: 1px solid #9356dc;
   color: white;
   border-radius: 25px;
-  padding: 9px 16px;
+  padding: 14px 16px;
   box-shadow: 10px 8px 7px lightgrey;
 }
 /*BLOC FONCTIONNEMENT*/
@@ -102,7 +103,7 @@ input {
 }
 .btn-number {
   position: absolute;
-  left: 25px;
+  margin-right: 239px;
   background-color: #9356dc;
   border-radius: 50%;
   height: 22px;
@@ -180,6 +181,7 @@ footer {
   font-size: 23px;
   margin-bottom: 15px;
   color: white;
+  margin-left: 0;
 }
 .footer-liens {
   display: flex;
@@ -194,4 +196,89 @@ footer {
 .footer-mentions a {
   font-size: 18px;
   color: white;
+}
+
+/*RESPONSIVE*/
+
+@media (min-width: 375px) {
+  /*FONCTIONNEMENT*/
+  .btn {
+    width: 90%;
+    justify-content: space-around;
+  }
+  .btn-number {
+    position: relative;
+    margin-right: 0;
+  }
+  .btn-icon {
+    font-size: 19px;
+  }
+  .btn-txt {
+    font-size: 19px;
+  }
+  /*RESTAURATION*/
+  .cards-contener {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media (min-width: 854px) {
+  .logo img {
+    width: 260px;
+  }
+  input {
+    height: 85px;
+    font-size: 20px;
+  }
+  h1 {
+    font-size: 36px;
+  }
+  .titres p {
+    font-size: 28px;
+  }
+  .btn-explore {
+    padding: 29px 45px;
+    font-size: 26px;
+    border-radius: 45px;
+  }
+  .explore-contener {
+    padding-bottom: 54px;
+  }
+  .card {
+    margin: 10px 18px;
+  }
+  .footer-logo {
+    font-size: 38px;
+  }
+  .footer-liens {
+    font-size: 25px;
+  }
+  .footer-mentions a {
+    font-size: 25px;
+  }
+}
+@media (min-width: 960px) {
+  .card {
+    width: 90%;
+  }
+  .image {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+  }
+  .footer-zonetexte {
+    padding: 38px 38px;
+  }
+  .footer-logo {
+    font-size: 44px;
+  }
+  .footer-liens {
+    font-size: 28px;
+  }
+  .footer-mentions a {
+    font-size: 28px;
+  }
 }
