--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
 }
 h1,
 h2 {
-  font-family: "Shrikhand", cursive;
   font-size: 27px;
 }
 a {
@@ -79,6 +78,12 @@ input {
   border-radius: 25px;
   padding: 14px 16px;
   box-shadow: 10px 8px 7px lightgrey;
+  transform: scale(1);
+  transition: transform 400ms;
+}
+
+.titres a:hover {
+  transform: scale(1.05);
 }
 /*BLOC FONCTIONNEMENT*/
 .fonctionnement-contener {
@@ -100,7 +105,18 @@ input {
   border-radius: 24px;
   font-weight: bold;
   box-shadow: 0px 5px 12px lightgrey;
+  transform: scale(1);
+  transition: transform 400ms;
 }
+.btn-contener a:hover {
+  background-color: #e4d9f1;
+  transform: scale(1.05);
+}
+
+.btn-contener a:hover .btn-icon {
+  color: #9356dc;
+}
+
 .btn-number {
   position: absolute;
   margin-right: 239px;
@@ -112,14 +128,6 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.btn-contener a:hover {
-  background-color: #e4d9f1;
-}
-
-.btn-contener a:hover .btn-icon {
-  color: #9356dc;
 }
 /*BLOC RESTAURANT*/
 .restaurant-contener {
@@ -142,6 +150,7 @@ input {
   background-color: white;
   overflow: hidden;
 }
+
 .image img {
   height: 160px;
   width: 100%;
@@ -176,9 +185,9 @@ footer {
 .footer-zonetexte {
   padding: 25px 25px;
 }
-
 .footer-logo {
   font-size: 23px;
+  font-family: "Shrikhand";
   margin-bottom: 15px;
   color: white;
   margin-left: 0;
@@ -187,7 +196,7 @@ footer {
   display: flex;
   flex-direction: row;
   margin-bottom: 13px;
-  font-size: 19px;
+  font-size: 18px;
   color: white;
 }
 .footer-icon {
@@ -227,11 +236,12 @@ footer {
 
 @media (min-width: 854px) {
   .logo img {
-    width: 260px;
+    width: 290px;
   }
   input {
     height: 85px;
     font-size: 20px;
+    width: 350px;
   }
   h1 {
     font-size: 36px;
@@ -240,7 +250,7 @@ footer {
     font-size: 28px;
   }
   .btn-explore {
-    padding: 29px 45px;
+    padding: 17px 28px;
     font-size: 26px;
     border-radius: 45px;
   }
@@ -250,14 +260,14 @@ footer {
   .card {
     margin: 10px 18px;
   }
-  .footer-logo {
-    font-size: 38px;
+  .footer-zonetexte {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
   }
   .footer-liens {
-    font-size: 25px;
-  }
-  .footer-mentions a {
-    font-size: 25px;
+    display: flex;
+    flex-direction: column;
   }
 }
 @media (min-width: 960px) {
@@ -273,12 +283,12 @@ footer {
     padding: 38px 38px;
   }
   .footer-logo {
-    font-size: 44px;
+    font-size: 32px;
   }
   .footer-liens {
-    font-size: 28px;
+    font-size: 20px;
   }
   .footer-mentions a {
-    font-size: 28px;
+    font-size: 20px;
   }
 }
