--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ a {
   color: black;
 }
 /*MOBILE FIRST*/
+
+/*LOADER*/
+
 /*HEADER*/
 
 header {
@@ -72,8 +75,7 @@ input {
   padding: 26px;
 }
 .btn-explore {
-  background-color: #9356dc;
-  border: 1px solid #9356dc;
+  border: 1px solid transparent;
   color: white;
   border-radius: 25px;
   padding: 14px 16px;
@@ -81,9 +83,11 @@ input {
   transform: scale(1);
   transition: transform 400ms;
 }
-
 .titres a:hover {
   transform: scale(1.05);
+}
+.btn-gradient {
+  background: linear-gradient(168deg, #ff79da 0%, #9356dc 80%);
 }
 /*BLOC FONCTIONNEMENT*/
 .fonctionnement-contener {
@@ -149,13 +153,14 @@ input {
   margin-bottom: 19px;
   background-color: white;
   overflow: hidden;
+  box-shadow: 9px 6px 12px lightgrey;
 }
-
 .image img {
   height: 160px;
   width: 100%;
   border-top-left-radius: 19px;
   border-top-right-radius: 19px;
+  object-fit: cover;
 }
 .new {
   position: absolute;
@@ -170,14 +175,56 @@ input {
   display: flex;
   justify-content: center;
 }
+.card_description {
+  display: flex;
+  justify-content: space-between;
+}
 .card-text {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   margin: 5px 13px;
 }
 .plat {
   font-weight: bold;
 }
+
+.coeur {
+  position: relative;
+  margin-right: 22px;
+  margin-top: 8px;
+}
+.coeur i {
+  color: #9d9d9d;
+  font-size: 24px;
+  left: 50%;
+}
+.coeur .heart-gradient {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+}
+.coeur .heart-gradient:hover {
+  background: linear-gradient(#ff79da, #9356dc);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  opacity: 1;
+  z-index: 999;
+}
+.coeur:hover {
+  cursor: pointer;
+  overflow: hidden;
+  opacity: 1;
+}
+.coeur .heart-default:hover {
+  opacity: 0;
+}
+.coeur .heart-default:hover,
+.coeur:hover,
+.coeur .heart-gradient:hover {
+  transition: 0.5s 0s ease;
+}
+
 /*FOOTER*/
 footer {
   background-color: #333131;
@@ -210,21 +257,6 @@ footer {
 /*RESPONSIVE*/
 
 @media (min-width: 375px) {
-  /*FONCTIONNEMENT*/
-  .btn {
-    width: 90%;
-    justify-content: space-around;
-  }
-  .btn-number {
-    position: relative;
-    margin-right: 0;
-  }
-  .btn-icon {
-    font-size: 19px;
-  }
-  .btn-txt {
-    font-size: 19px;
-  }
   /*RESTAURATION*/
   .cards-contener {
     display: flex;
@@ -235,6 +267,23 @@ footer {
 }
 
 @media (min-width: 854px) {
+  /*BLOC EXPLORER*/
+
+  .btn-contener {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .explore-contener {
+    display: flex;
+    flex-direction: row;
+  }
+  .localisation {
+    width: 50%;
+  }
+  .titres {
+    width: 50%;
+  }
   .logo img {
     width: 290px;
   }
@@ -243,20 +292,34 @@ footer {
     font-size: 20px;
     width: 350px;
   }
+  .localisation {
+    border: 3px solid transparent;
+    border-radius: 25px;
+    /* background: linear-gradient(168deg, #ff79da 0%, #9356dc 80%); */
+  }
+
+  input {
+    /* background: linear-gradient(168deg, #ff79da 0%, #9356dc 80%); */
+  }
+  ::placeholder {
+    color: black;
+  }
+  .localisation-icon {
+    color: black;
+    size: 29px;
+  }
   h1 {
-    font-size: 36px;
+    font-size: 32px;
   }
   .titres p {
-    font-size: 28px;
+    font-size: 21px;
   }
   .btn-explore {
     padding: 17px 28px;
     font-size: 26px;
     border-radius: 45px;
   }
-  .explore-contener {
-    padding-bottom: 54px;
-  }
+
   .card {
     margin: 10px 18px;
   }
@@ -271,8 +334,13 @@ footer {
   }
 }
 @media (min-width: 960px) {
+  .cards-contener {
+    display: flex;
+    flex-wrap: wrap;
+  }
   .card {
-    width: 90%;
+    width: 499px;
+    margin: 12px 35px;
   }
   .image {
     display: flex;
@@ -290,5 +358,11 @@ footer {
   }
   .footer-mentions a {
     font-size: 20px;
+  }
+}
+@media (min-width: 1470px) {
+  .card {
+    width: 521px;
+    margin: 15px 48px;
   }
 }
