--- a/menus.css
+++ b/menus.css
@@ -22,15 +22,34 @@ a {
 
 /*HEADER*/
 header {
-  display: flex;
-  justify-content: space-evenly;
   width: 100%;
-  padding: 20px 0;
+  padding-top: 20px;
 }
-.logo img {
-  width: 180px;
+.head-bande {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 18px;
+  margin: 0 40px;
 }
-
+.header-arrow a {
+  width: 22px;
+}
+.header-logo img {
+  width: 172px;
+}
+figure img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 242px;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+figure {
+  margin: 0;
+}
 /*FOOTER*/
 footer {
   background-color: #333131;
@@ -62,33 +81,75 @@ footer {
 
 /*BLOC MAIN*/
 
-/*L'image*/
-.contener img {
-  width: 100%;
-}
-.contener {
-  background-color: #f5f6fa;
+/*Le bloc gris*/
+.bloc-menu {
+  background-color: #f6f6f6;
   padding-bottom: 35px;
+  border-top-left-radius: 35px;
+  border-top-right-radius: 35px;
+  margin-top: -50px;
+  z-index: 999;
+  position: relative;
 }
-/*Le bloc menu*/
+
+/*Le titre + coeur*/
 .title {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0 17px;
 }
+.coeur {
+  position: relative;
+  margin-top: 8px;
+}
+.coeur i {
+  color: #9d9d9d;
+  font-size: 24px;
+  left: 50%;
+}
+.coeur .heart-gradient {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+}
+.coeur .heart-gradient:hover {
+  background: linear-gradient(#ff79da, #9356dc);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  opacity: 1;
+  z-index: 999;
+}
+.coeur:hover {
+  cursor: pointer;
+  overflow: hidden;
+  opacity: 1;
+}
+.coeur .heart-default:hover {
+  opacity: 0;
+}
+.coeur .heart-default:hover,
+.coeur:hover,
+.coeur .heart-gradient:hover {
+  transition: 0.5s 0s ease;
+}
+
 .menu {
   margin-bottom: 18px;
 }
-.menu_section a {
+.menu_section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+/*Le menu*/
 h3 {
   margin-left: 18px;
+  opacity: 0.5;
+  border-bottom: 2px solid #99e2d0;
+  width: 40px;
 }
 .menu-btn {
   display: flex;
@@ -99,7 +160,6 @@ h3 {
   width: 95%;
   height: 58px;
   margin-bottom: 17px;
-  /* padding: 8px; */
 }
 .btn_valider {
   display: flex;
@@ -112,7 +172,6 @@ h3 {
   padding-right: 10px;
   color: white;
   background-color: #99e2d0;
-  /* display: none; */
 }
 
 .menu-btntext {
@@ -125,17 +184,20 @@ h3 {
   display: flex;
   align-items: flex-end;
 }
+
+/*Le bouton*/
 .commandez {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #9356dc;
-  border: 1px solid #9356dc;
+  border: 1px solid transparent;
   border-radius: 25px;
   box-shadow: 10px 8px 7px lightgrey;
-  width: 50%;
-  margin-left: 75px;
+  width: 70%;
   padding: 12px 0;
+}
+.btn-gradient {
+  background: linear-gradient(168deg, #ff79da 0%, #9356dc 80%);
 }
 .commandez a {
   color: white;
