--- a/menus.css
+++ b/menus.css
@@ -35,8 +35,9 @@ header {
 .header-arrow a {
   width: 22px;
 }
-.header-logo img {
-  width: 172px;
+.header-logo {
+  font-family: "Shrikhand";
+  font-size: 35px;
 }
 figure img {
   display: flex;
@@ -134,6 +135,22 @@ footer {
   transition: 0.5s 0s ease;
 }
 
+/*Animation du menu*/
+@keyframes menu_animation {
+  0% {
+    transform: translateY(15px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.menu_section {
+  animation: menu_animation 1800ms ease;
+}
+
 .menu {
   margin-bottom: 18px;
 }
@@ -151,40 +168,55 @@ h3 {
   border-bottom: 2px solid #99e2d0;
   width: 40px;
 }
-.menu-btn {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid white;
-  background-color: white;
-  border-radius: 21px;
-  width: 95%;
-  height: 58px;
-  margin-bottom: 17px;
+h4 {
+  margin: 0;
+  padding: 8px 0 8px 8px;
 }
-.btn_valider {
+p {
+  margin: 0;
+}
+.menu-btn {
+  position: relative;
+  background-color: #fff;
+  margin-bottom: 18px;
+  cursor: pointer;
+  overflow: hidden;
+  -webkit-box-align: center;
+  align-items: center;
+  width: 95%;
+  border-radius: 16px;
+  box-shadow: 3px 3px 10px #f7f4f4;
+}
+.menu-btn-titre {
+  width: 70%;
+}
+.menu-btn-sstitre {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8px 8px 8px;
+}
+
+.btn_valider i {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  width: 19%;
-  border-top-right-radius: 21px;
-  border-bottom-right-radius: 21px;
-  padding-right: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
   color: white;
-  background-color: #99e2d0;
+  /* display: none; */
+  overflow: hidden;
+  width: 18%;
+  transform: translateY(360deg);
 }
 
-.menu-btntext {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 0 9px;
+.btn_valider i:hover {
+  background: #99e2d0;
+  transform: translateX(-100%);
+  transition: transform 600ms ease-in-out;
 }
-.menu-btn-price {
-  display: flex;
-  align-items: flex-end;
-}
-
 /*Le bouton*/
 .commandez {
   display: flex;
