--- a/styles_pageaccueil.css
+++ b/styles_pageaccueil.css
@@ -314,6 +314,7 @@ footer {
 }
 .footer-liens {
   display: flex;
+
   flex-direction: row;
   margin-bottom: 13px;
   font-size: 18px;
@@ -341,7 +342,9 @@ footer {
 
 @media (min-width: 854px) {
   /*BLOC EXPLORER*/
-
+  .logo {
+    font-size: 46px;
+  }
   .btn-contener {
     display: flex;
     flex-direction: row;
@@ -368,9 +371,7 @@ footer {
   .localisation {
     border: 3px solid transparent;
     border-radius: 25px;
-    /* background: linear-gradient(168deg, #ff79da 0%, #9356dc 80%); */
   }
-
   ::placeholder {
     color: black;
   }
@@ -389,20 +390,25 @@ footer {
     font-size: 26px;
     border-radius: 45px;
   }
-
+  .btn {
+    width: 283px;
+  }
+  .btn-number {
+    margin-right: 288px;
+  }
   .card {
     margin: 10px 18px;
   }
   .footer-zonetexte {
     display: flex;
-    align-items: center;
     justify-content: space-around;
+    align-items: center;
   }
-  .footer-liens {
-    display: flex;
-    flex-direction: column;
+  .footer-logo {
+    font-size: 43px;
   }
 }
+
 @media (min-width: 960px) {
   .cards-contener {
     display: flex;
@@ -411,11 +417,6 @@ footer {
   .card {
     width: 499px;
     margin: 12px 35px;
-  }
-  .image {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
   }
   .footer-zonetexte {
     padding: 38px 38px;
@@ -431,6 +432,15 @@ footer {
   }
 }
 @media (min-width: 1470px) {
+  .logo {
+    font-size: 52px;
+  }
+  .btn {
+    width: 370px;
+  }
+  .btn-number {
+    margin-right: 374px;
+  }
   .card {
     width: 521px;
     margin: 15px 48px;
