--- a/styles_pagesmenu.css
+++ b/styles_pagesmenu.css
@@ -181,8 +181,10 @@ h4 {
   margin: 0;
   padding: 8px 0 8px 8px;
 }
+
 p {
   margin: 0;
+  flex-wrap: nowrap;
 }
 .menu-btn {
   position: relative;
