--- a/styles_pagesmenu.css
+++ b/styles_pagesmenu.css
@@ -177,17 +177,16 @@ h3 {
   border-bottom: 2px solid #99e2d0;
   width: 40px;
 }
-h4 {
-  margin: 0;
-  padding: 8px 0 8px 8px;
-}
-
+h4,
 p {
   margin: 0;
-  flex-wrap: nowrap;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
+
 .menu-btn {
-  position: relative;
+  display: flex;
   background-color: #fff;
   margin-bottom: 18px;
   cursor: pointer;
@@ -197,26 +196,19 @@ p {
   width: 95%;
   border-radius: 16px;
   box-shadow: 3px 3px 10px #f7f4f4;
+  padding: 7px;
 }
 .menu-btn-titre {
-  width: 70%;
+  flex: 1;
 }
-.menu-btn-sstitre {
-  display: flex;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 8px 8px 8px;
-}
+/* .menu-btn-titre p {
+  text-overflow: ellipsis;
+} */
 .btn_valider i {
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  padding: 24px 10px;
-  position: absolute;
-  right: 0;
-  top: 0;
 }
 .menu-btn:hover .menu-btn-sstitre {
   animation: checked ease 600ms;
@@ -274,9 +266,9 @@ p {
   border: 1px solid transparent;
   border-radius: 25px;
   box-shadow: 10px 8px 7px lightgrey;
-  width: 70%;
+  width: 60%;
   padding: 12px 0;
-  margin-left: 45px;
+  margin: auto;
   transform: scale(1);
   transition: transform 400ms;
 }
