--- a/styles_pageaccueil.css
+++ b/styles_pageaccueil.css
@@ -235,9 +235,9 @@ input {
   object-fit: cover;
 }
 .new {
-  position: absolute;
-  margin-left: 180px;
-  margin-top: 22px;
+  position: relative;
+  left: 10px;
+  top: 10px;
   background-color: #99e2d0;
   border: 1px solid #99e2d0;
   width: 85px;
@@ -330,13 +330,11 @@ footer {
 
 /*RESPONSIVE*/
 
-@media (min-width: 375px) {
+@media (min-width: 355px) {
   /*RESTAURATION*/
-  .cards-contener {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  .card {
+    width: 80%;
+    margin-bottom: 23px;
   }
 }
 
@@ -377,7 +375,7 @@ footer {
   }
   .localisation-icon {
     color: black;
-    size: 29px;
+    font-size: 20px;
   }
   h1 {
     font-size: 32px;
@@ -396,39 +394,39 @@ footer {
   .btn-number {
     margin-right: 288px;
   }
+  .cards-contener {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
   .card {
     margin: 10px 18px;
+    width: 40%;
   }
+
   .footer-zonetexte {
     display: flex;
     justify-content: space-around;
     align-items: center;
   }
   .footer-logo {
-    font-size: 43px;
+    font-size: 47px;
+    margin-bottom: 45px;
   }
 }
 
 @media (min-width: 960px) {
   .cards-contener {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
   }
   .card {
-    width: 499px;
-    margin: 12px 35px;
+    width: 40%;
   }
-  .footer-zonetexte {
-    padding: 38px 38px;
-  }
-  .footer-logo {
-    font-size: 32px;
-  }
-  .footer-liens {
-    font-size: 20px;
-  }
-  .footer-mentions a {
-    font-size: 20px;
+  .localisation-icon {
+    font-size: 26px;
   }
 }
 @media (min-width: 1470px) {
@@ -440,9 +438,5 @@ footer {
   }
   .btn-number {
     margin-right: 374px;
-  }
-  .card {
-    width: 521px;
-    margin: 15px 48px;
   }
 }
