--- a/styles_pagesmenu.css
+++ b/styles_pagesmenu.css
@@ -199,6 +199,7 @@ p {
   border-radius: 11px;
   box-shadow: 3px 3px 10px #f7f4f4;
   padding-left: 17px;
+  box-shadow: 2px 4px 9px lightgrey;
 }
 .menu-btn-titre {
   flex: 1;
@@ -303,9 +304,6 @@ p {
     width: 30%;
   }
 
-  footer {
-    height: auto;
-  }
   .footer-zonetexte {
     display: flex;
     justify-content: space-around;
